fixed navigation button when question wraps so that buttons remain visible

--- a/quiz.css
+++ b/quiz.css
@@ -82,3 +82,7 @@ button:hover{
   height: 200px;
   margin-top: 40px;
 }
+
+#quizNavigation {
+  padding-top: 50px;
+}
